840984024 [AIGI] Scholarship application form - fixed issue with popup z-index

--- a/wp-content/themes/aigi/assets/css/popup-styles.css
+++ b/wp-content/themes/aigi/assets/css/popup-styles.css
@@ -94,7 +94,7 @@
     top: 0;
     left: 0;
     position: fixed;
-    z-index: 99999;
+    z-index: 999;
 }
 .popup-main-wrapper.popup_opened .item_popup_wrapper {
     display: flex;
